--- a/assets/languages/mr.json
+++ b/assets/languages/mr.json
@@ -1,22 +1,22 @@
 {
     "appName": "स्पूनशेअर",
-    "tagLine": "जीवन पोषण, हास्य निर्माण!",
+    "tagLine": "जीवनांना पोषण, हास्यांचा सृजन!",
 
-    "onboardingIntro1": "कोणाच्या तरी जेवणात चमचा व्हा,",
-    "onboardingIntro2": "भूक नाही, आशा भरा.",
+    "onboardingIntro1": "कोणाच्या जेवणात चमच व्हा,",
+    "onboardingIntro2": "भूक नाही, आशा जागृत करा.",
     "createAccount": "खाते तयार करा",
     "alreadyMember": "आधीच सदस्य आहात?",
     "login": "लॉगिन",
 
-    "slogan1": "चळवळीत सामील व्हा!",
-    "slogan2": "जवळील अन्न शोधा किंवा आमच्यासोबत फरक घडवा!",
+    "slogan1": "सामुदायिक संघटनेत सामील व्हा!",
+    "slogan2": "जवळचा अन्न शोधा किंवा फरक पाडवण्यासाठी आम्हांसोबत सामील व्हा!",
     "createAccountGoogle": "गूगलसह सुरू ठेवा",
     "fullName": "पूर्ण नाव",
     "emailId": "ईमेल",
     "contactNumber": "संपर्क क्रमांक",
     "password": "पासवर्ड",
     "confirmPassword": "पासवर्डची पुष्टी करा",
-    "termsAndCondition1": "साइन अप करून, तुम्ही स्पूनशेअरचे वाचले आहे आणि सहमत आहात याची पुष्टी करता",
+    "termsAndCondition1": "साइन अप करून, तुम्ही स्पूनशेअरच्या",
     "privacyPolicy": "गोपनीयता धोरण",
     "terms": "अटी",
     "alreadyAccount": "आधीपासूनच खाते आहे?",
@@ -26,5 +26,140 @@
     "signInGoogle": "गूगलसह साइन इन",
     "forgotPassword": "पासवर्ड विसरलात",
     "dontHaveAccount": "खाते नाही?",
-    "signUp": "साइन अप"
+    "signUp": "साइन अप",
+
+    "slogan3": "ओहो! तुम्हाला पासवर्ड विसरलंय का",
+    "slogan4": "चिंता नका, आम्ही तुमच्यासाठी इथे आहोत.",
+    "emailEmpty": "कृपया तुमचा ईमेल प्रविष्ट करा.",
+    "emailWrong": "कृपया एक वैध ईमेल प्रविष्ट करा.",
+    "emailPasswordReset": "पासवर्ड रीसेट ईमेल पाठवित आहे...",
+    "passwordReset": "पासवर्ड रीसेट ईमेल सफळतेने पाठविला.",
+    "emailAssociatedAccount": "तुमच्या खात्याशी संबंधित ईमेल प्रविष्ट करा आणि आम्ही तुम्हाला तुमचा पासवर्ड रीसेट करण्यासाठी एक लिंक पाठवू.",
+    "enterEmail": "ईमेल पत्ता प्रविष्ट करा",
+    "getLink": "लिंक मिळवा",
+
+    "recentlyUploaded": "आत्ताच अपलोड केलेले",
+    "dailyActive": "प्रतिदिन सक्रिय",
+    "nearAvailableFoods": "जवळचे उपलब्ध अन्न",
+    "pastFreeFoods": "मागील विनामूल्य अन्न",
+
+    "foodDetails": "अन्नाची माहिती",
+    "venue": "स्थल",
+    "uploadedBy": "अपलोड केलेले",
+    "location": "स्थान :",
+    "community": "समुदाय :",
+    "foodType": "अन्नाचा प्रकार :",
+    "availabilityDaily": "उपलब्धता : प्रतिदिन",
+    "from": "पासून",
+    "to": "पर्यंत",
+    "getDirections": "मार्ग ओळखा",
+
+    "mapAppBarTitle": "नक्कीच विभागीत केलेले अन्न",
+    "clickDetails": "अधिक माहितीसाठी इथे क्लिक करा",
+    "ngoLocation": "एनजीओ स्थान",
+    "waterLocation": "पाणी स्थान",
+
+    "donatePageOption": "एक पर्याय निवडा",
+    "donateFood": "अन्नदान करा",
+    "shareFreeFood": "विनामूल्य अन्न सामायिक करा",
+    "shareWater": "पाणी स्टॉल सामायिक करा",
+
+    "shareFreeFoodForm": "विनामूल्य अन्न सामायिक करा",
+    "venueShareFoodForm": "स्थळ *",
+    "enterAddress": "पत्ता प्रविष्ट करा *",
+    "forwhom": "यांसाठी आहे? (समुदाय) *",
+    "selectDate": "तारीख निवडा *",
+    "selectTime": "वेळ निवडा *",
+    "foodType1": "अन्नाचा प्रकार *",
+    "foodVeg": "शाकाहारी",
+    "foodNonVeg": "मांसाहारी",
+    "foodBoth": "दोन्ही",
+    "details": "* अन्न सामायिक करण्यासाठी खालील माहिती भरा",
+    "pickGallery": "गॅलरीमधून निवडा",
+    "captureCamera": "कॅमेराने कॅप्चर करा",
+    "submitButton": "सबमिट करा",
+
+    "donateFoodForm": "अन्नदान करा",
+    "pickupLocation": "पिकअप स्थान *",
+    "pickupAddress": "पिकअप पत्ता *",
+    "foodLife": "अन्न आयु *",
+    "foodDescription": "अन्न वर्णन *",
+    "foodQuantity": "अन्न मात्रा *",
+    "pickupDate": "पिकअप तारीख *",
+    "pickupTimeTill": "पिकअप वेळ पर्यंत *",
+    "requiredFileds": "कृपया सर्व आवश्यक फील्ड भरा",
+    "foodsubmitted": "अन्न सफळतेने सबमिट केले!",
+    "errorSubmitting": "अन्न सबमिट करतांना त्रुटी",
+
+    "shareWaterForm": "विनामूल्य पाणी सामायिक करा",
+
+    "dashboardPageSlogan": "स्पूनशेअर कुटुंबात सामील व्हा, 'शून्य भुक्ती क्रांतीत सामील व्हा",
+    "joinVolunteer": "वॉलंटियरसोबत सामील व्हा",
+    "joinNgo": "एनजीओसोबत सामील व्हा",
+
+    "volunteerForm": "वॉलंटियर फॉर्म",
+    "fullNameVolunteer": "पूर्ण नाव *",
+    "mobileNo": "मोबाइल क्रमांक *",
+    "emailAddress": "ईमेल पत्ता *",
+    "selectGender": "लिंग निवडा *",
+    "genderMale": "पुरुष",
+    "genderfemale": "स्त्री",
+    "genderNotSay": "सांगणार नाही",
+    "birthday": "जन्मदिन *",
+    "occupation": "व्यवसाय *",
+    "address": "पत्ता *",
+    "linkedInInstagramLinks": "लिंक्डइन/इंस्टाग्राम प्रोफाइल लिंक्स *",
+    "selectNgo": "एनजीओ निवडा *",
+    "formSubmittedSuccessfully": "फॉर्म सफळतेने सबमिट केला",
+    "errorSubmittingForm": "फॉर्म सबमिट करतांना त्रुटी :",
+    "allFieldsRequired": "सर्व फील्ड आवश्यक आहेत",
+
+    "ngoForm": "एनजीओ फॉर्म",
+    "ngoName": "एनजीओचं नाव *",
+    "ngoNo": "एनजीओ क्रमांक *",
+    "ngoMobileNo": "मोबाइल क्रमांक *",
+    "ngoType": "प्रकार निवडा *",
+    "ngoFoodDonation": "अन्नदान",
+    "ngoCharity": "चॅरिटी",
+    "ngoNotSay": "सांगणार नाही",
+    "incorporationDate": "समावेश तारीख *",
+    "description": "वर्णन *",
+    "uploadLogo": "* तुमचं एनजीओ लोगो अपलोड करा",
+    "errorUploading": "Firebase स्टोरेजमध्ये चित्र अपलोड करतांना त्रुटी",
+    "submittingForm": "फॉर्म सबमिट करत आहे...",
+    "formSubmittedNgo": "फॉर्म सफळतेने सबमिट केला. आम्ही तुम्हाला शीघ्र परत संपर्क साधू.",
+    "errorFormNgo": "फॉर्म सबमिट करतांना त्रुटी. कृपया नंतर पुन्हा प्रयत्न करा.",
+
+    "role": "व्यवस्थापक",
+    "adminVerify": "सामायिक स्वतंत्र अन्न सत्यापित करा",
+    "verifySlogan": "दानकर्त्यांच्या द्वारा सामायिक केलेल्या विनामूल्य अन्न वस्तूंची सत्यापित करा.",
+    "verifyDonatedFood": "दात्यांच्या द्वारा सामायिक केलेल्या विनामूल्य अन्न वस्तूंची सत्यापित करा.",
+    "donatedFoodSlogan": "सहभागींच्या द्वारा दात्यांच्या द्वारा सामायिक केलेल्या विनामूल्य अन्न वस्तूंची सत्यापित करा.",
+    "verifyRecycle": "रीसायकल अन्न सत्यापित करा",
+    "verifyRecycleSlogan": "पुनर्चक्रण अन्न वस्तूंची सत्यापित करा.",
+    "ngoVerify": "एनजीओ व्यवस्थापन",
+    "ngoSlogan": "विविध क्रियाकलापांसाठी एनजीओ व्यवस्थापित करा.",
+    "adminManagement": "व्यवस्थापक माहिती व्यवस्थापन",
+    "adminInformation": "व्यवस्थापक माहिती आणि प्रोफाइल व्यवस्थापित करा.",
+
+    "recycleeFood": "अन्न पुनर्चक्रण करा",
+    "recycleSolgan1": "सर्वात विश्वसनीय आणि कुशल",
+    "recycleSolgan2": "कचरा निराकरण सेवा",
+    "recycleSlogan3": "आपल्याला सर्वोत्तम कचरा निराकरण सेवा पुरवण्याची प्रतिबद्धता आहे. आम्ही विश्वसनीय, कुशल आणि सदैव समयानुसार आहोत.",
+    "requestPickup": "पिकअप विनंती करा",
+
+    "pickUpRecycle": "पिकअप स्थान *",
+    "pickUpAddress": "पिकअप पत्ता *",
+    "foodLifeRecycle": "अन्न आयु *",
+    "foodDescriptionrecycle": "अन्न वर्णन *",
+    "foodQuantityrecycle": "अन्न मात्रा *",
+    "pickupDateRecycle": "पिकअप तारीख *",
+
+    "profileInformation": "वैयक्तिक माहिती",
+    "contact": "संपर्क",
+    "organisationInformation": "संस्था माहिती",
+    "organisation": "संस्था",
+    "roleProfile": "भूमिका",
+    "individual": "व्यक्ती",
+    "becomeVolunteer": "वॉलंटियर बना"
 }
