--- a/assets/lang/ka.json
+++ b/assets/lang/ka.json
@@ -1,30 +1,210 @@
 {
     "appName": "ಸ್ಪೂನ್‌ಶೇರ್",
-    "tagLine": "ಜೀವನಕ್ಕೆ ಪೋಷಣೆ, ನಗುವಿಗೆ ನಾಟಕ!",
+    "tagLine": "ಜೀವನದಲ್ಲಿ ಊಟ ನೀಡುತ್ತಾ ನಗುವಿಕೆ ಹರಿಯಿಸುವುದು!",
 
-    "onboardingIntro1": "ಯಾರ ಆಹಾರದಲ್ಲಿ ಚಮಚವಾಗಿರುವಿರಿ,",
-    "onboardingIntro2": "ಹಸಿವಿಗಲ್ಲ ನಿರಾಶೆಗೆ ಹರಡಿ.",
+    "onboardingIntro1": "ಯಾರ ಆಹಾರಕ್ಕೆ ಸ್ಪೂನ್ ಆಗಿರುವವನೋ,",
+    "onboardingIntro2": "ಹಸಿವಿಗಲ್ಲ ನಂಬಿಕೆಯನ್ನು ಹರಡಿರುವನೋ.",
     "createAccount": "ಖಾತೆ ರಚಿಸಿ",
     "alreadyMember": "ಈಗಾಗಲೇ ಸದಸ್ಯ?",
     "login": "ಲಾಗಿನ್",
 
-    "slogan1": "ಚಳವಳಿಯಲ್ಲಿ ಸೇರಿ!",
-    "slogan2": "ಹತ್ತಿರದ ಆಹಾರವನ್ನು ಅನ್ವೇಷಿಸಿ ಅಥವಾ ನಮ್ಮ ಜೊತೆಗೆ ವ್ಯತ್ಯಾಸ ಮಾಡಲು ಸೇರಿ!",
-    "createAccountGoogle": "ಗೂಗಲ್ ಜಾರಿಗೆ ರಚಿಸಿ",
+    "slogan1": "ಚಲನೆಗೆ ಸೇರಿ!",
+    "slogan2": "ಹತ್ತಿರದ ಆಹಾರವನ್ನು ಅನ್ವೇಷಿಸಿ ಅಥವಾ ನಮ್ಮೊಂದಿಗೆ ವ್ಯತ್ಯಾಸ ಮಾಡಲು ಸೇರಿ!",
+    "createAccountGoogle": "ಗೂಗಲ್ ಜೊತೆಗೆ ಮುಂದುವರಿಯಿರಿ",
     "fullName": "ಪೂರ್ಣ ಹೆಸರು",
     "emailId": "ಇಮೇಲ್",
     "contactNumber": "ಸಂಪರ್ಕ ಸಂಖ್ಯೆ",
     "password": "ಪಾಸ್‌ವರ್ಡ್",
-    "confirmPassword": "ಪಾಸ್‌ವರ್ಡ್ ದೃಢಪಡಿಸಿ",
-    "termsAndCondition1": "ಸೈನ್ ಅಪ್ ಮಾಡುವುದರಿಂದ, ನೀವು ಸ್ಪೂನ್‌ಶೇರ್‌ಗೆ ಓದಿದ್ದು ಮತ್ತು ಒಪ್ಪಿಗೆ ನೀಡಿದ್ದಾರೆ ಎಂದು ನಿಶ್ಚಯಿಸುತ್ತೀರಿ",
-    "privacyPolicy": "ಗೌಪ್ಯತಾ ನೀತಿ",
+    "confirmPassword": "ಪಾಸ್‌ವರ್ಡ್ ದೃಢೀಕರಿಸಿ",
+    "termsAndCondition1": "ನೋಡಿದಿರಿ, ನೀವು ಸ್ಪೂನ್‌ಶೇರ್ ಗೆಲ್ಲಬೇಕೆಂದು ಸೈನ್ ಅಪ್ ಮಾಡುವುದರ ಮೂಲಕ,",
+    "privacyPolicy": "ಗೌಪ್ಯತೆ ನೀತಿ",
     "terms": "ಷರತ್ತುಗಳು",
-    "alreadyAccount": "ಈಗಾಗಲೇ ಖಾತೆ ಇದೆಯಾ?",
+    "alreadyAccount": "ಈಗಾಗಲೇ ಖಾತೆ ಹೊಂದಿದ್ದೀರಾ?",
     "lognIn": "ಲಾಗಿನ್",
 
     "welcome": "ಮರಳಿ ಸ್ವಾಗತ!",
-    "signInGoogle": "ಗೂಗಲ್ ಜಾರಿಗೆ ಸೈನ್ ಇನ್",
-    "forgotPassword": "ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಿದ್ದೀರಾ?",
-    "dontHaveAccount": "ಖಾತೆ ಇಲ್ಲವೇ?",
-    "signUp": "ಸೈನ್ ಅಪ್"
+    "signInGoogle": "ಗೂಗಲ್ ಜೊತೆಗೆ ಲಾಗಿನ್ ಮಾಡಿ",
+    "forgotPassword": "ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಿದ್ದೀರಾ",
+    "dontHaveAccount": "ಖಾತೆ ಇಲ್ಲದಿದ್ದರೆ?",
+    "signUp": "ಸೈನ್ ಅಪ್",
+    
+    "slogan3": "ಓಹ್! ನಿಮ್ಮ ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಿದ್ದೀರಿ",
+    "slogan4": "ಚಿಂತೆಯಿಲ್ಲ, ನಾವು ನಿಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತಿದ್ದೇವೆ.",
+    "emailEmpty": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಇಮೇಲ್ ನಮೂದಿಸಿ.",
+    "emailWrong": "ದಯವಿಟ್ಟು ಒಳ್ಳೆಯ ಇಮೇಲ್ ನಮೂದಿಸಿ.",
+    "emailPasswordReset": "ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಾಗ ಇಮೇಲ್ ಕಳುಹಿಸಲಾಗುತ್ತಿದೆ...",
+    "passwordReset": "ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಾಗ ಇಮೇಲ್ ಯಶಸ್ವಿಯಾಗಿ ಕಳುಹಿಸಲಾಗಿದೆ.",
+    "emailAssociatedAccount": "ನಿಮ್ಮ ಖಾತೆಗೆ ಸಂಬಂಧಿಸಿದ ಇಮೇಲ್ ನಮೂದಿಸಿ, ನಾವು ನಿಮಗೆ ಪಾಸ್‌ವರ್ಡ್ ಮರೆತಿದ್ದೇವೆ ಎಂದು ನಿಮಗೆ ಒಂದು ಲಿಂಕ್ ಕಳುಹಿಸೋಣ.",
+    "enterEmail": "ಇಮೇಲ್ ವಿಳಾಸ ನಮೂದಿಸಿ",
+    "getLink": "ಲಿಂಕ್ ಪಡೆಯಿರಿ",
+
+
+    "recentlyUploaded": "ಹೊಸದಾಗಿ ಅಪ್‌ಲೋಡ್ ಮಾಡಲಾಗಿದೆ",
+    "dailyActive": "ದಿನಾಂಕ ಸಕ್ರಿಯ",
+    "nearAvailableFoods": "ಹತ್ತಿರದ ಲಭ್ಯ ಆಹಾರಗಳು",
+    "pastFreeFoods": "ಹಿಂದಿನ ಉಚಿತ ಆಹಾರಗಳು",
+
+    "foodDetails": "ಆಹಾರದ ವಿವರಗಳು",
+    "venue": "ಸ್ಥಳ",
+    "uploadedBy": "ಅಪ್‌ಲೋಡ್ ಮಾಡಲಾದವರು",
+    "location": "ಸ್ಥಳ :",
+    "community": "ಕಾಮ್ಯೂನಿಟಿ :",
+    "foodType": "ಆಹಾರ ಪ್ರಕಾರ :",
+    "availabilityDaily": "ಲಭ್ಯತೆ : ದೈನಂದಿನ",
+    "from": "ಇಂದ",
+    "to": "ಇಲ್ಲಿದೆ",
+    "getDirections": "ಮಾರ್ಗವನ್ನು ಪಡೆಯಿರಿ",
+
+    "mapAppBarTitle": "ನಕ್ಷೆ ನೋಡಿ ಹಂಚಿದ ಆಹಾರ",
+    "clickDetails": "ಇಲ್ಲಿ ಹೆಚ್ಚಿನ ವಿವರಗಳನ್ನು ನೋಡಲು ಕ್ಲಿಕ್ ಮಾಡಿ",
+    "ngoLocation": "ಎನ್‌ಜಿಓ ಸ್ಥಳ",
+    "waterLocation": "ನೀರಿನ ಸ್ಥಳ",
+
+    "donatePageOption": "ಒಂದು ಆಯ್ಕೆ ಮಾಡಿ",
+    "donateFood": "ಆಹಾರ ದಾನ",
+    "shareFreeFood": "ಉಚಿತ ಆಹಾರ ಹಂಚಿಕೆ",
+    "shareWater": "ಉಚಿತ ನೀರು ಸ್ಟಾಲ್ ಹಂಚಿಕೆ",
+     
+    "shareFreeFoodForm": "ಉಚಿತ ಆಹಾರ ಹಂಚಿಕೆ",
+    "venueShareFoodForm": "ಸ್ಥಳ *",
+    "enterAddress": "ವಿಳಾಸ ನಮೂದಿಸಿ *",
+    "forwhom": "ಯಾರ ಅದು? (ಕಾಮ್ಯೂನಿಟಿ) *",
+    "selectDate": "ದಿನಾಂಕ ಆಯ್ಕೆಮಾಡಿ *",
+    "selectTime": "ಸಮಯ ಆಯ್ಕೆಮಾಡಿ *",
+    "foodType1": "ಆಹಾರ ಪ್ರಕಾರ *",
+    "foodVeg": "ಸಾಕ್ಷಿಯ",
+    "foodNonVeg": "ಮಾಂಸಾಹಾರ",
+    "foodBoth": "ಎರಡೂ",
+    "details": "* ಆಹಾರ ಹಂಚಿಕೆಯ ಕೆಳಗೆ ವಿವರಗಳನ್ನು ನಮೂದಿಸಿ",
+    "pickGallery": "ಗ್ಯಾಲರಿಯಿಂದ ಆಯ್ಕೆ ಮಾಡಿ",
+    "captureCamera": "ಕ್ಯಾಮೆರಾದಿಂದ ಹಿಡಿದಿರಿ",
+    "submitButton": "ಸಲ್ಲಿಸಿ",
+
+    "donateFoodForm": "ಆಹಾರ ದಾನ",
+    "pickupLocation": "ಪಿಕಪ್ ಸ್ಥಳ *",
+    "pickupAddress": "ಪಿಕಪ್ ವಿಳಾಸ *",
+    "foodLife": "ಆಹಾರ ಜೀವ *",
+    "foodDescription": "ಆಹಾರ ವಿವರ *",
+    "foodQuantity": "ಆಹಾರ ಪ್ರಮಾಣ *",
+    "pickupDate": "ಪಿಕಪ್ ದಿನಾಂಕ *",
+    "pickupTimeTill": "ಪಿಕಪ್ ಸಮಯ ಹೇಗಿದೆ *",
+    "requiredFileds": "ದಯವಿಟ್ಟು ಎಲ್ಲಾ ಅಗತ್ಯವಿರುವ ಹೊಣೆಗಳನ್ನು ನಮೂದಿಸಿ",
+    "foodsubmitted": "ಆಹಾರ ಯಶಸ್ವಿಯಾಗಿ ಸಲ್ಲಿಸಲಾಗಿದೆ!",
+    "errorSubmitting": "ಆಹಾರ ಸಲ್ಲಿಸುವಾಗ ದೋಷ",
+
+    "shareWaterForm": "ಉಚಿತ ನೀರು ಹಂಚಿಕೆ",
+
+    "dashboardPageSlogan": "ಸ್ಪೂನ್‌ಶೇರ್ ಕುಟುಂಬದ ಸಂಗ ಸೇರಿ, ಜೀವನದ ಹಸಿವಿಗೆ ಕೊನೆಯಿಲ್ಲದ ಹರಕೆ",
+    "joinVolunteer": "ಸ್ವಯಂಸೇವಕರಾಗಿ ನಮ್ಮೊಂದಿಗೆ ಸೇರಿ",
+    "joinNgo": "ನಮ್ಮೊಂದಿಗೆ ಎನ್‌ಜಿಒಗಳಾಗಿ ಸೇರಿ",
+
+    "volunteerForm": "ಸ್ವಯಂಸೇವಕ ಫಾರ್ಮ್",
+    "fullNameVolunteer": "ಪೂರ್ಣ ಹೆಸರು *",
+    "mobileNo": "ಮೊಬೈಲ್ ಸಂಖ್ಯೆ *",
+    "emailAddress": "ಇಮೇಲ್ ವಿಳಾಸ *",
+    "selectGender": "ಲಿಂಗ ಆಯ್ಕೆಮಾಡಿ *",
+    "genderMale": "ಗಂಡು",
+    "genderfemale": "ಹೆಣ್ಣು",
+    "genderNotSay": "ಹೇಳಲು ಇಲ್ಲ",
+    "birthday": "ಹುಟ್ಟುಹಬ್ಬದ ದಿನಾಂಕ *",
+    "occupation": "ಕೆಲಸ *",
+    "address": "ವಿಳಾಸ *",
+    "linkedInInstagramLinks": "ಲಿಂಕ್ಡಿನ್ / ಇನ್ಸ್ಟಾಗ್ರಾಮ್ ಪ್ರೊಫೈಲ್ ಲಿಂಕ್ಸ್ *",
+    "selectNgo": "ಎನ್‌ಜಿಒ ಆಯ್ಕೆಮಾಡಿ *",
+    "formSubmittedSuccessfully": "ಫಾರ್ಮ್ ಯಶಸ್ವಿಯಾಗಿ ಸಲ್ಲಿಸಲಾಗಿದೆ",
+    "errorSubmittingForm": "ಫಾರ್ಮ್ ಸಲ್ಲಿಸುವಾಗ ದೋಷ :",
+    "allFieldsRequired": "ಎಲ್ಲಾ ಕ್ಷೇತ್ರಗಳು ಅಗತ್ಯವಿವರ",
+
+    "ngoForm": "ಎನ್‌ಜಿಒ ಫಾರ್ಮ್",
+    "ngoName": "ಎನ್‌ಜಿಒ ಹೆಸರು *",
+    "ngoNo": "ಎನ್‌ಜಿಒ ಸಂಖ್ಯೆ *",
+    "ngoMobileNo": "ಮೊಬೈಲ್ ಸಂಖ್ಯೆ *",
+    "ngoType": "ಆಯ್ಕೆ ಪ್ರಕಾರ *",
+    "ngoFoodDonation": "ಆಹಾರ ದಾನ",
+    "ngoCharity": "ಪ್ರಯಾಣ",
+    "ngoNotSay": "ಹೇಳಲು ಇಲ್ಲ",
+    "incorporationDate": "ಸಂಸ್ಥೆಯ ದಿನಾಂಕ *",
+    "description": "ವಿವರಣೆ *",
+    "uploadLogo": "* ನಿಮ್ಮ ಎನ್‌ಜಿಒ ಲೋಗೊವನ್ನು ಅಪ್‌ಲೋಡ್ ಮಾಡಿ",
+    "errorUploading": "Firebase ಭಂಡಾರಕ್ಕೆ ಚಿತ್ರ ಅಪ್‌ಲೋಡ್ ಮಾಡುವಾಗ ದೋಷ",
+    "submittingForm": "ಫಾರ್ಮ್ ಸಲ್ಲಿಸುವಾಗ...",
+    "formSubmittedNgo": "ಫಾರ್ಮ್ ಯಶಸ್ವಿಯಾಗಿ ಸಲ್ಲಿಸಲಾಗಿದೆ. ನಾವು ಬೇಗನೆ ನಿಮಗೆ ಹಿಂತಿರುಗಿ ಬರುತ್ತೇವೆ.",
+    "errorFormNgo": "ಫಾರ್ಮ್ ಸಲ್ಲಿಸುವಾಗ ದೋಷ. ದಯವಿಟ್ಟು ನಂದಲು ಪುನಃ ಪ್ರಯತ್ನಿಸಿ.",
+    
+    "role": "ನಿರ್ವಾಹಕ",
+    "adminVerify": "ಉಚಿತ ಉಚಿತ ಉಚಿತ ಆಹಾರವನ್ನು ಪರಿಶೀಲಿಸಿ",
+    "verifySlogan": "ದಾತಾರಿಂದ ಹಂಚಿದ ಉಚಿತ ಆಹಾರ ವಿಚಾರಿಸಿ.",
+    "verifyDonatedFood": "ದಾನಿಗಳಿಂದ ನೀಡಲ್ಪಟ್ಟ ಉಚಿತ ಆಹಾರವನ್ನು ಪರಿಶೀಲಿಸಿ.",
+    "donatedFoodSlogan": "ಕೊಡುಗೆದಾನಿಗಳಿಂದ ನೀಡಲ್ಪಟ್ಟ ಉಚಿತ ಆಹಾರ ವಿಚಾರಿಸಿ.",
+    "verifyRecycle": "ಹಸಿರು ಆಹಾರವನ್ನು ಪರಿಶೀಲಿಸಿ",
+    "verifyRecycleSlogan": "ಹಸಿರು ಆಹಾರವನ್ನು ಪುನಃ ಬಳಸಲು ಪರಿಶೀಲಿಸಿ.",
+    "ngoVerify": "ಎನ್‌ಜಿಒ ನಿರ್ವಹಣೆ",
+    "ngoSlogan": "ವಿವಿಧ ಕ್ರಿಯೆಗಳಿಗಾಗಿ ಎನ್‌ಜಿಒವನ್ನು ನಿರ್ವಹಿಸಿ.",
+    "adminManagement": "ನಿರ್ವಾಹಕ ಮಾಹಿತಿ ನಿರ್ವಹಣೆ",
+    "adminInformation": "ನಿರ್ವಾಹಕ ಮಾಹಿತಿ ಮತ್ತು ಪ್ರೊಫೈಲ್ ನಿರ್ವಹಣೆ.",
+
+    "recycleeFood": "ಆಹಾರ ಪುನಃ ಬಳಸಿ",
+    "recycleSolgan1": "ಅತ್ಯಂತ ನಿಷ್ಪತ್ತಿಯಾದ ಮತ್ತು ದಕ್ಷವಾದ",
+    "recycleSolgan2": "ಹಸಿರು ವಿಲೇವಾರ ಸೇವೆ",
+    "recycleSlogan3": "ನಾವು ನಿಷ್ಪತ್ತಿಯಾದ, ದಕ್ಷ ಮತ್ತು ಯಾವಾಗಲೂ ಸಮಯದಲ್ಲಿ ನಿಮಗೆ ಹಸಿರು ವಿಲೇವಾರ ಸೇವೆ ಒದಗಿಸಲು ಮುನ್ನಡೆದಿದ್ದೇವೆ.",
+    "requestPickup": "ಅಭ್ಯರ್ಥನೆ ಪಿಕಪ್",
+
+    "pickUpRecycle": "ಪಿಕಪ್ ಸ್ಥಳ *",
+    "pickUpAddress": "ಪಿಕಪ್ ವಿಳಾಸ *",
+    "foodLifeRecycle": "ಆಹಾರ ಜೀವ *",
+    "foodDescriptionrecycle": "ಆಹಾರ ವಿವರ *",
+    "foodQuantityrecycle": "ಆಹಾರ ಪ್ರಮಾಣ *",
+    "uploadPackerproof": "* ನಿಮ್ಮ ಪ್ಯಾಕರ್ ಪ್ರುಫ್ ಫೊಟೋ ಅಪ್‌ಲೋಡ್ ಮಾಡಿ",
+    "pickupdate": "ಪಿಕಪ್ ದಿನಾಂಕ *",
+    "pickupTime": "ಪಿಕಪ್ ಸಮಯ *",
+
+    "verifyPage": "ಪರಿಶೀಲಿಸಿ ಪುಟ",
+    "verifyOption": "ಒಂದು ಆಯ್ಕೆ ಮಾಡಿ",
+    "donateRecycle": "ಪುನಃ ಬಳಸುವ ಆಹಾರ",
+    "submitRecycle": "ಸಲ್ಲಿಸಿ",
+    "verifyNgo": "ಎನ್‌ಜಿಒ ಪರಿಶೀಲಿಸಿ",
+
+    "moreInfo": "ಹೆಚ್ಚಿನ ಮಾಹಿತಿ",
+
+    "cancel": "ರದ್ದುಮಾಡಿ",
+    "volunteerList": "ಸ್ವಯಂಸೇವಕರ ಪಟ್ಟಿ",
+    "noDataFound": "ಮಾಹಿತಿ ಲಭ್ಯವಿಲ್ಲ",
+    "viewVolunteer": "ಸ್ವಯಂಸೇವಕರ ವೀಕ್ಷಿಸಿ",
+    "ngoList": "ಎನ್‌ಜಿಒ ಪಟ್ಟಿ",
+    "ngoDataFound": "ಮಾಹಿತಿ ಲಭ್ಯವಿದೆ",
+    "viewNgo": "ಎನ್‌ಜಿಒ ವೀಕ್ಷಿಸಿ",
+    "volunteerInformation": "ಸ್ವಯಂಸೇವಕ ಮಾಹಿತಿ",
+    "fullName1": "ಪೂರ್ಣ ಹೆಸರು",
+    "volunteerEmail": "ವಿಳಾಸ ಇಮೇಲ್",
+    "volunteerGender": "ಲಿಂಗ",
+    "volunteerBirthday": "ಹುಟ್ಟುಹಬ್ಬದ ದಿನಾಂಕ",
+    "volunteerOccupation": "ಕೆಲಸ",
+    "volunteerAddress": "ವಿಳಾಸ",
+    "volunteerLinkedin": "ಲಿಂಕ್‌ಡಿನ್",
+    "ngoInformation": "ಎನ್‌ಜಿಒ ಮಾಹಿತಿ",
+    "ngoFullName": "ಪೂರ್ಣ ಹೆಸರು",
+    "ngoEmail": "ವಿಳಾಸ ಇಮೇಲ್",
+    "ngoTypeType": "ಆಯ್ಕೆ ಪ್ರಕಾರ",
+    "incorporationDateNgo": "ಸಂಸ್ಥೆಯ ದಿನಾಂಕ",
+    "ngoDescription": "ವಿವರಣೆ",
+    "foodTypeDropdown": "ಆಹಾರ ಪ್ರಕಾರೋಪಾಯ",
+    "selectDropdown": "ಆಯ್ಕೆಮಾಡಿ",
+    "to1": "ಇಲ್ಲಿದೆ",
+    "foodLifeDropdown": "ಆಹಾರ ಜೀವ ಡ್ರಾಪ್ ಡೌನ್",
+    "foodQuantityDropdown": "ಆಹಾರ ಪ್ರಮಾಣ ಡ್ರಾಪ್ ಡೌನ್",
+    "pickUpRecycleDropdown": "ಪಿಕಪ್ ಮೇಲ್ಪಟ್ಟಿ ಡೌನ್ಡೌನ್",
+    "timeSelectRecycleDropdown": "ಸಮಯ ಆಯ್ಕೆಮಾಡಿ",
+    "foodTypeRecycleDropdown": "ಆಹಾರ ಪ್ರಕಾರ ಪುನಃ ಬಳಸುವ ಡ್ರಾಪ್ಡೌನ್",
+    "recycleWaterSlogan": "ಸ್ನಾನ ಸಾಮಗ್ರಿಗಾಗಿ ನೀರು ಪುನಃ ಬಳಸಿದ ಹಸಿರು ವಿಲೇವಾರ ಸೇವೆ",
+    "requestpickupform": "ಅಭ್ಯರ್ಥನೆ ಪಿಕಪ್ ಫಾರ್ಮ್",
+    "pickupLocation1": "ಪಿಕಪ್ ಸ್ಥಳ *",
+    "pickupaddress": "ಪಿಕಪ್ ವಿಳಾಸ *",
+    "foodliferecycle": "ಆಹಾರ ಜೀವ *",
+    "foodDescriptionrecycle1": "ಆಹಾರ ವಿವರ *",
+    "foodquantityrecycle": "ಆಹಾರ ಪ್ರಮಾಣ *",
+    "pikupdate": "ಪಿಕಪ್ ದಿನಾಂಕ *",
+    "time": "ಸಮಯ *",
+    "submitform": "ಸಲ್ಲಿಸಿ",
+    "submittedrecyclefood": "ಆಹಾರ ಯಶಸ್ವಿಯಾಗಿ ಪುನಃ ಬಳಸುತ್ತಿದೆ",
+    "errorsubmitting": "ದೋಷ ಆಹಾರವನ್ನು ಸಲ್ಲಿಸುವಾಗ"
 }
