--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -94,7 +94,8 @@
 
     "shareWaterForm": "Share Free Water",
 
-    "dashboardPageSlogan": "Join SpoonShare Family', 'join the zero hunger revolution",
+    "dashboardPageSlogan": "Join SpoonShare Family",
+    "dashboardPageSlogan2":"join the zero hunger revolution",
     "joinVolunteer": "JOIN US AS Volunteer",
     "joinNgo": "JOIN US AS NGO",
 
